Update Playground, Docs, and Readme.

--- a/Documentation/Extensions/Result.html
+++ b/Documentation/Extensions/Result.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>PromiseQueue Class Reference</title>
+    <title>Result Extension Reference</title>
     <link rel="stylesheet" type="text/css" href="../css/jazzy.css" />
     <link rel="stylesheet" type="text/css" href="../css/highlight.css" />
     <meta charset='utf-8'>
@@ -10,8 +10,8 @@
     
   </head>
   <body>
-    <a name="//apple_ref/swift/Class/PromiseQueue" class="dashAnchor"></a>
-    <a title="PromiseQueue Class Reference"></a>
+    <a name="//apple_ref/swift/Extension/Result" class="dashAnchor"></a>
+    <a title="Result Extension Reference"></a>
     <header>
       <div class="content-wrapper">
         <p><a href="../index.html">PinkyPromise Docs</a> (100% documented)</p>
@@ -22,7 +22,7 @@
       <p id="breadcrumbs">
         <a href="../index.html">PinkyPromise Reference</a>
         <img id="carat" src="../img/carat.png" />
-        PromiseQueue Class Reference
+        Result Extension Reference
       </p>
     </div>
     <div class="content-wrapper">
@@ -86,15 +86,15 @@
       <article class="main-content">
         <section>
           <section class="section">
-            <h1>PromiseQueue</h1>
+            <h1>Result</h1>
               <div class="declaration">
                 <div class="language">
-                  <pre class="highlight swift"><code><span class="kd">public</span> <span class="kd">final</span> <span class="kd">class</span> <span class="kt">PromiseQueue</span><span class="o">&lt;</span><span class="kt">Value</span><span class="o">&gt;</span></code></pre>
+                  <pre class="highlight swift"><code><span class="kd">@_frozen</span>
+<span class="kd">enum</span> <span class="kt">Result</span><span class="o">&lt;</span><span class="kt">Success</span><span class="p">,</span> <span class="kt">Failure</span><span class="o">&gt;</span> <span class="k">where</span> <span class="kt">Failure</span> <span class="p">:</span> <span class="kt">Error</span></code></pre>
 
                 </div>
               </div>
-            <p>A simple queue that runs one Promise at a time in the order they&rsquo;re added.</p>
-
+            
           </section>
           <section class="section task-group-section">
             <div class="task-group">
@@ -102,9 +102,9 @@
                 <li class="item">
                   <div>
                     <code>
-                    <a name="/s:12PinkyPromise0B5QueueCACyxGycfc"></a>
-                    <a name="//apple_ref/swift/Method/init()" class="dashAnchor"></a>
-                    <a class="token" href="#/s:12PinkyPromise0B5QueueCACyxGycfc">init()</a>
+                    <a name="/s:s6ResultO12PinkyPromises5Error_pRs_rlE6tryMapyAByqd__sAD_pGqd__xKXElF"></a>
+                    <a name="//apple_ref/swift/Method/tryMap(_:)" class="dashAnchor"></a>
+                    <a class="token" href="#/s:s6ResultO12PinkyPromises5Error_pRs_rlE6tryMapyAByqd__sAD_pGqd__xKXElF">tryMap(_:)</a>
                     </code>
                   </div>
                   <div class="height-container">
@@ -112,41 +112,18 @@
                     <section class="section">
                       <div class="pointer"></div>
                       <div class="abstract">
-                        <p>Creates a queue.</p>
+                        <p>Transforms a success value into a new successful or failed result.</p>
+
+<p>If the receiver is a failure, wraps the same error without invoking <code>transform</code>.</p>
+
+<p>This is an error-catching variation on <code>flatMap(_:)</code>.</p>
 
                       </div>
                       <div class="declaration">
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="kd">public</span> <span class="nf">init</span><span class="p">()</span></code></pre>
-
-                        </div>
-                      </div>
-                    </section>
-                  </div>
-                </li>
-                <li class="item">
-                  <div>
-                    <code>
-                    <a name="/s:12PinkyPromise0B5QueueC5batch8promisesAA0B0VySayxGGSayAGyxGG_tF"></a>
-                    <a name="//apple_ref/swift/Method/batch(promises:)" class="dashAnchor"></a>
-                    <a class="token" href="#/s:12PinkyPromise0B5QueueC5batch8promisesAA0B0VySayxGGSayAGyxGG_tF">batch(promises:)</a>
-                    </code>
-                  </div>
-                  <div class="height-container">
-                    <div class="pointer-container"></div>
-                    <section class="section">
-                      <div class="pointer"></div>
-                      <div class="abstract">
-                        <p>Creates a promise that enqueues an array of promises and unifies their results.</p>
-
-                      </div>
-                      <div class="declaration">
-                        <h4>Declaration</h4>
-                        <div class="language">
-                          <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="kd">public</span> <span class="kd">func</span> <span class="nf">batch</span><span class="p">(</span><span class="nv">promises</span><span class="p">:</span> <span class="p">[</span><span class="kt"><a href="../Structs/Promise.html">Promise</a></span><span class="o">&lt;</span><span class="kt">Value</span><span class="o">&gt;</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="kt"><a href="../Structs/Promise.html">Promise</a></span><span class="o">&lt;</span><span class="p">[</span><span class="kt">Value</span><span class="p">]</span><span class="o">&gt;</span></code></pre>
+                          <pre class="highlight swift"><code><span class="kd">func</span> <span class="n">tryMap</span><span class="o">&lt;</span><span class="kt">U</span><span class="o">&gt;</span><span class="p">(</span><span class="n">_</span> <span class="nv">transform</span><span class="p">:</span> <span class="p">(</span><span class="kt">Success</span><span class="p">)</span> <span class="k">throws</span> <span class="o">-&gt;</span> <span class="kt">U</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="kt">Result</span><span class="o">&lt;</span><span class="kt">U</span><span class="p">,</span> <span class="kt">Error</span><span class="o">&gt;</span></code></pre>
 
                         </div>
                       </div>
@@ -157,12 +134,12 @@
                             <tr>
                               <td>
                                 <code>
-                                <em>promises</em>
+                                <em>transform</em>
                                 </code>
                               </td>
                               <td>
                                 <div>
-                                  <p>The array of promises to run.</p>
+                                  <p>A function that returns a new success value or throws a new error, given a success value.</p>
                                 </div>
                               </td>
                             </tr>
@@ -171,7 +148,7 @@
                       </div>
                       <div>
                         <h4>Return Value</h4>
-                        <p>A promise whose task runs all the given promises and produces either an array of all the given promises&rsquo; success values, or the first error among them.</p>
+                        <p>The transformed result or the original failure.</p>
                       </div>
                     </section>
                   </div>
