--- a/Documentation/docsets/PinkyPromise.docset/Contents/Resources/Documents/Extensions.html
+++ b/Documentation/docsets/PinkyPromise.docset/Contents/Resources/Documents/Extensions.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Classes  Reference</title>
+    <title>Extensions  Reference</title>
     <link rel="stylesheet" type="text/css" href="css/jazzy.css" />
     <link rel="stylesheet" type="text/css" href="css/highlight.css" />
     <meta charset='utf-8'>
@@ -10,8 +10,8 @@
     
   </head>
   <body>
-    <a name="//apple_ref/swift/Section/Classes" class="dashAnchor"></a>
-    <a title="Classes  Reference"></a>
+    <a name="//apple_ref/swift/Section/Extensions" class="dashAnchor"></a>
+    <a title="Extensions  Reference"></a>
     <header>
       <div class="content-wrapper">
         <p><a href="index.html">PinkyPromise Docs</a> (100% documented)</p>
@@ -22,7 +22,7 @@
       <p id="breadcrumbs">
         <a href="index.html">PinkyPromise Reference</a>
         <img id="carat" src="img/carat.png" />
-        Classes  Reference
+        Extensions  Reference
       </p>
     </div>
     <div class="content-wrapper">
@@ -86,8 +86,8 @@
       <article class="main-content">
         <section>
           <section class="section">
-            <h1>Classes</h1>
-            <p>The following classes are available globally.</p>
+            <h1>Extensions</h1>
+            <p>The following extensions are available globally.</p>
 
           </section>
           <section class="section task-group-section">
@@ -96,9 +96,9 @@
                 <li class="item">
                   <div>
                     <code>
-                    <a name="/s:12PinkyPromise0B5QueueC"></a>
-                    <a name="//apple_ref/swift/Class/PromiseQueue" class="dashAnchor"></a>
-                    <a class="token" href="#/s:12PinkyPromise0B5QueueC">PromiseQueue</a>
+                    <a name="/s:s6ResultO"></a>
+                    <a name="//apple_ref/swift/Extension/Result" class="dashAnchor"></a>
+                    <a class="token" href="#/s:s6ResultO">Result</a>
                     </code>
                   </div>
                   <div class="height-container">
@@ -106,15 +106,15 @@
                     <section class="section">
                       <div class="pointer"></div>
                       <div class="abstract">
-                        <p>A simple queue that runs one Promise at a time in the order they&rsquo;re added.</p>
-
-                        <a href="Classes/PromiseQueue.html" class="slightly-smaller">See more</a>
+                        
+                        <a href="Extensions/Result.html" class="slightly-smaller">See more</a>
                       </div>
                       <div class="declaration">
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="kd">public</span> <span class="kd">final</span> <span class="kd">class</span> <span class="kt">PromiseQueue</span><span class="o">&lt;</span><span class="kt">Value</span><span class="o">&gt;</span></code></pre>
+                          <pre class="highlight swift"><code><span class="kd">@_frozen</span>
+<span class="kd">enum</span> <span class="kt">Result</span><span class="o">&lt;</span><span class="kt">Success</span><span class="p">,</span> <span class="kt">Failure</span><span class="o">&gt;</span> <span class="k">where</span> <span class="kt">Failure</span> <span class="p">:</span> <span class="kt">Error</span></code></pre>
 
                         </div>
                       </div>
